--- a/inference/trillium/vLLM/Qwen2.5-32B/benchmark-tpu.yaml
+++ b/inference/trillium/vLLM/Qwen2.5-32B/benchmark-tpu.yaml
@@ -32,6 +32,12 @@ spec:
       volumes:
             - name: output
               emptyDir: {}
+            - name: gke-gcsfuse-cache
+              emptyDir:
+               medium: Memory
+            - name: dshm
+              emptyDir:
+               medium: Memory
             - name: gcs-fuse-csi-ephemeral
               csi:
                    driver: gcsfuse.csi.storage.gke.io
@@ -43,7 +49,7 @@ spec:
       serviceAccountName: storage-access   
       containers:
               - name: vllm
-                image: vllm/vllm-tpu:nightly
+                image: vllm/vllm-tpu:nightly #docker.io/vllm/vllm-tpu:73aa7041bfee43581314e6f34e9a657137ecc092 #
                 imagePullPolicy: Always
                 ports:
                 - containerPort: 8471
@@ -58,23 +64,23 @@ spec:
                     secretKeyRef:
                       name: huggingface
                       key: HF_TOKEN
-                - name: TRANSFORMERS_CACHE
-                  value: /.cache
+                - name: HF_HOME
+                  value: /dev/shm
                 - name: shm-size
                   value: 16g
                 - name: VLLM_XLA_CACHE_PATH
                   value: "/data"
-                - name: VLLM_USE_V1
-                  value: "1"
+                #- name: VLLM_USE_V1
+                #  value: "1"
                 command:
                 - bash
                 - -c
                 - |
                   
-                  vllm serve Qwen/Qwen2.5-VL-32B-Instruct \
+                  vllm serve Qwen/Qwen2.5-VL-7B-Instruct \
                   --host=0.0.0.0 \
                   --port=8000 \
-                  --tensor-parallel-size 8 \
+                  --tensor-parallel-size 1 \
                   --pipeline-parallel-size 1 \
                   --dtype bfloat16 \
                   --gpu-memory-utilization 0.98 \
@@ -92,5 +98,7 @@ spec:
                   mountPath: /output
                 - name: gcs-fuse-csi-ephemeral
                   mountPath: /data
+                - name: dshm
+                  mountPath: /dev/shm
 
 
